4th-year/compiler-construction/compiler-construction-assignment-1/tests/negative-tests/missing-semi-colons.ccl
main
{
    const i:integer = 0

    if i == 0
    {
        skip
    }
    else
    {
        i = i + 1
    }
}